[Fix] Fix Projects & Misc Mobile Layout

--- a/index.html
+++ b/index.html
@@ -162,100 +162,57 @@
           <h2>RWKV-Projects</h2>
         </header>
         <div
-          class="resume-item"
+          class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <h3 class="resume-item-title" itemprop="name">
-            <a href="https://github.com/BlinkDL/RWKV-LM" itemprop="url"
-              >RWKV-LM</a
-            >
-          </h3>
-          <p class="resume-item-copy">Training RWKV (and latest developments)</p>
+          <a class="project-item-title" href="https://github.com/BlinkDL/RWKV-LM" itemprop="url">RWKV-LM</a>
+          <p class="project-item-description">Training RWKV (and latest developments)</p>
         </div>
+
         <div
-          class="resume-item"
+          class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <h3 class="resume-item-title" itemprop="name">
-            <a href="https://github.com/josStorer/RWKV-Runner" itemprop="url"
-              >RWKV-Runner</a
-            >
-          </h3>
-          <p class="resume-item-copy">
-            RWKV GUI with one-click install and API
-          </p>
+          <a class="project-item-title" href="https://github.com/josStorer/RWKV-Runner" itemprop="url">RWKV-Runner</a>
+          <p class="project-item-description">RWKV GUI with one-click install and API</p>
         </div>
+
         <div
-          class="resume-item"
+          class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <h3 class="resume-item-title" itemprop="name">
-            <a href="https://pypi.org/project/rwkv/" itemprop="url"
-              >RWKV pip package</a
-            >
-          </h3>
-          <p class="resume-item-copy">Official RWKV pip package</p>
+          <a class="project-item-title" href="https://pypi.org/project/rwkv/" itemprop="url">RWKV pip package</a>
+          <p class="project-item-description">Official RWKV pip package</p>
         </div>
+
         <div
-          class="resume-item"
+          class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <h3 class="resume-item-title" itemprop="name">
-            <a href="https://github.com/JL-er/RWKV-PEFT" itemprop="url"
-              >RWKV-PEFT</a
-            >
-          </h3>
-          <p class="resume-item-copy">
-            Finetuning RWKV (9GB VRAM can finetune 7B)
-          </p>
+          <a class="project-item-title" href="https://github.com/JL-er/RWKV-PEFT" itemprop="url">RWKV-PEFT</a>
+          <p class="project-item-description">Finetuning RWKV (9GB VRAM can finetune 7B)</p>
         </div>
+
         <div
-          class="resume-item"
+          class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <h3 class="resume-item-title" itemprop="name">
-            <a
-              href="https://github.com/cgisky1980/ai00_rwkv_server"
-              itemprop="url"
-              >RWKV-server</a
-            >
-          </h3>
-          <p class="resume-item-copy">
-            Fast WebGPU inference (NVIDIA/AMD/Intel), nf4/int8/fp16
-          </p>
+          <a class="project-item-title" href="https://github.com/cgisky1980/ai00_rwkv_server" itemprop="url">RWKV-server</a>
+          <p class="project-item-description">Fast WebGPU inference (NVIDIA/AMD/Intel), nf4/int8/fp16</p>
         </div>
-        <!-- <div
-          class="resume-item"
-          itemscope
-          itemtype="http://schema.org/CreativeWork"
-        >
-          <h3 class="resume-item-title" itemprop="name">
-            <a href="https://github.com/saharNooby/rwkv.cpp" itemprop="url"
-              >RWKV.cpp</a
-            >
-          </h3>
-          <p class="resume-item-copy">
-            Fast CPU/cuBLAS/CLBlast inference, int4/int8/fp16/fp32
-          </p>
-        </div> -->
+
         <div
-          class="resume-item"
+          class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <h3 class="resume-item-title" itemprop="name">
-            <a
-              href="https://github.com/search?o=desc&q=rwkv&s=updated&type=Repositories"
-              itemprop="url"
-              >More... (400+ RWKV projects)</a
-            >
-          </h3>
-          <p class="resume-item-copy"></p>
+          <a class="project-item-title" href="https://github.com/search?o=desc&q=rwkv&s=updated&type=Repositories" itemprop="url">More... (400+ RWKV projects)</a>
+          <p class="project-item-description"></p>
         </div>
       </section>
 
@@ -263,67 +220,41 @@
         <header class="section-header">
           <h2>Misc</h2>
         </header>
+
         <div
-          class="resume-item"
+          class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <h3 class="resume-item-title" itemprop="name">
-            <a href="https://huggingface.co/BlinkDL" itemprop="url"
-              >RWKV raw weights</a
-            >
-          </h3>
-          <p class="resume-item-copy">All latest RWKV weights</p>
+          <a class="project-item-title" href="https://huggingface.co/BlinkDL" itemprop="url">RWKV raw weights</a>
+          <p class="project-item-description">All latest RWKV weights</p>
         </div>
+
         <div
-          class="resume-item"
+          class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <h3 class="resume-item-title" itemprop="name">
-            <a href="https://huggingface.co/RWKV" itemprop="url"
-              >RWKV weights</a
-            >
-          </h3>
-          <p class="resume-item-copy">HuggingFace-compatible RWKV weights</p>
+          <a class="project-item-title" href="https://huggingface.co/BlinkDL" itemprop="url">RWKV weights</a>
+          <p class="project-item-description">HuggingFace-compatible RWKV weights</p>
         </div>
-        <!-- <div
-          class="resume-item"
-          itemscope
-          itemtype="http://schema.org/CreativeWork"
-        >
-          <h3 class="resume-item-title" itemprop="name">
-            <a
-              href="https://github.com/BlinkDL/RWKV-LM/blob/main/RWKV-v5/rwkv_v6_demo.py"
-              itemprop="url"
-              >RWKV v6 explained</a
-            >
-          </h3>
-          <p class="resume-item-copy"></p>
-        </div> -->
+
         <div
-          class="resume-item"
+          class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <h3 class="resume-item-title" itemprop="name">
-            <a
-              href="https://scholar.google.com/scholar?scisbd=2&q=rwkv&as_sdt=0,5"
-              itemprop="url"
-              >RWKV-related papers</a
-            >
-          </h3>
-          <p class="resume-item-copy"></p>
+          <a class="project-item-title" href="https://scholar.google.com/scholar?scisbd=2&q=rwkv&as_sdt=0,5" itemprop="url">RWKV-related papers</a>
+          <p class="project-item-description"></p>
         </div>
+
         <div
-          class="resume-item"
+          class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <h3 class="resume-item-title" itemprop="name">
-            <a href="https://wiki.rwkv.com/" itemprop="url">RWKV wiki</a>
-          </h3>
-          <p class="resume-item-copy">Community wiki</p>
+          <a class="project-item-title" href="https://wiki.rwkv.com/" itemprop="url">RWKV wiki</a>
+          <p class="project-item-description">Community wiki</p>
         </div>
 
         <header class="section-header">
