[Add] Subtitle Redirect & Hover Opactiy

--- a/index.html
+++ b/index.html
@@ -163,59 +163,65 @@
         <header class="section-header">
           <h2>RWKV-Projects</h2>
         </header>
-        <div
+        <a
+          href="https://github.com/BlinkDL/RWKV-LM"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <a class="project-item-title" href="https://github.com/BlinkDL/RWKV-LM" itemprop="url">RWKV-LM</a>
+          <p class="project-item-title">RWKV-LM</p>
           <p class="project-item-description">Training RWKV (and latest developments)</p>
-        </div>
+        </a>
 
-        <div
+        <a
+          href="https://github.com/josStorer/RWKV-Runner"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <a class="project-item-title" href="https://github.com/josStorer/RWKV-Runner" itemprop="url">RWKV-Runner</a>
+          <p class="project-item-title">RWKV-Runner</p>
           <p class="project-item-description">RWKV GUI with one-click install and API</p>
-        </div>
+        </a>
 
-        <div
+        <a
+          href="https://pypi.org/project/rwkv/"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <a class="project-item-title" href="https://pypi.org/project/rwkv/" itemprop="url">RWKV pip package</a>
+          <p class="project-item-title">RWKV pip package</p>
           <p class="project-item-description">Official RWKV pip package</p>
-        </div>
+        </a>
 
-        <div
+        <a
+          href="https://github.com/JL-er/RWKV-PEFT"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <a class="project-item-title" href="https://github.com/JL-er/RWKV-PEFT" itemprop="url">RWKV-PEFT</a>
+          <p class="project-item-title">RWKV-PEFT</p>
           <p class="project-item-description">Finetuning RWKV (9GB VRAM can finetune 7B)</p>
-        </div>
+        </a>
 
-        <div
+        <a
+          href="https://github.com/cgisky1980/ai00_rwkv_server"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <a class="project-item-title" href="https://github.com/cgisky1980/ai00_rwkv_server" itemprop="url">RWKV-server</a>
+          <p class="project-item-title">RWKV-server</p>
           <p class="project-item-description">Fast WebGPU inference (NVIDIA/AMD/Intel), nf4/int8/fp16</p>
-        </div>
+        </a>
 
-        <div
+        <a
+          href="https://github.com/search?o=desc&q=rwkv&s=updated&type=Repositories"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <a class="project-item-title" href="https://github.com/search?o=desc&q=rwkv&s=updated&type=Repositories" itemprop="url">More... (400+ RWKV projects)</a>
+          <p class="project-item-title">More... (400+ RWKV projects)</p>
           <p class="project-item-description"></p>
-        </div>
+        </a>
       </section>
 
       <section class="content-section">
@@ -223,41 +229,45 @@
           <h2>Misc</h2>
         </header>
 
-        <div
+        <a
+          href="https://huggingface.co/BlinkDL"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <a class="project-item-title" href="https://huggingface.co/BlinkDL" itemprop="url">RWKV raw weights</a>
+          <p class="project-item-title">RWKV raw weights</p>
           <p class="project-item-description">All latest RWKV weights</p>
-        </div>
+        </a>
 
-        <div
+        <a
+          href="https://huggingface.co/BlinkDL"
           class="project-item"
           itemscope
-          itemtype="http://schema.org/CreativeWork"
+          itemtype="https://huggingface.co/RWKV"
         >
-          <a class="project-item-title" href="https://huggingface.co/BlinkDL" itemprop="url">RWKV weights</a>
+          <p class="project-item-title">RWKV weights</p>
           <p class="project-item-description">HuggingFace-compatible RWKV weights</p>
-        </div>
+        </a>
 
-        <div
+        <a
+          href="https://scholar.google.com/scholar?scisbd=2&q=rwkv&as_sdt=0,5"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <a class="project-item-title" href="https://scholar.google.com/scholar?scisbd=2&q=rwkv&as_sdt=0,5" itemprop="url">RWKV-related papers</a>
+          <p class="project-item-title">RWKV-related papers</p>
           <p class="project-item-description"></p>
-        </div>
+        </a>
 
-        <div
+        <a
+          href="https://wiki.rwkv.com/"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
         >
-          <a class="project-item-title" href="https://wiki.rwkv.com/" itemprop="url">RWKV wiki</a>
+          <p class="project-item-title">RWKV wiki</p>
           <p class="project-item-description">Community wiki</p>
-        </div>
+        </a>
 
         <header class="section-header">
           <h2>RWKV-Papers</h2>
