--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       .wrapper {
         padding: 0 12px;
       }
+
+      .content-section {
+        margin-bottom: 1.5em;
+      }
     </style>
   </head>
 
@@ -258,8 +262,7 @@
           <p class="project-item-title">RWKV-related papers</p>
           <p class="project-item-description"></p>
         </a>
-
-        <a
+      <a
           href="https://wiki.rwkv.com/"
           class="project-item"
           itemscope
@@ -268,7 +271,8 @@
           <p class="project-item-title">RWKV wiki</p>
           <p class="project-item-description">Community wiki</p>
         </a>
-
+      </section>
+      <section class="content-section">
         <header class="section-header">
           <h2>RWKV-Papers</h2>
         </header>
