--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 class="icon-link"
                 itemprop="sameAs"
                 style="display: flex;"
+                target="_blank"
                 ><svg
                   class="icon"
                   xmlns="http://www.w3.org/2000/svg"
@@ -95,6 +96,7 @@
                 class="icon-link"
                 itemprop="sameAs"
                 style="display: flex;"
+                target="_blank"
                 ><svg
                   class="icon"
                   xmlns="http://www.w3.org/2000/svg"
@@ -133,27 +135,27 @@
             performance, fast inference, fast training, saves VRAM, "infinite"
             ctxlen, and free text embedding. Moreover it's 100% attention-free,
             and a
-            <a href="https://lfaidata.foundation/projects/rwkv/">Linux Foundation AI project</a
+            <a href="https://lfaidata.foundation/projects/rwkv/" style="text-decoration: underline;" target="_blank">Linux Foundation AI project</a
             >.
           </p>
         </div>
         <div style="display: flex; margin-top: -0.5rem; gap: 0.3rem">
           <a
             href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-1"
-            class="contact-button">
+            class="contact-button" target="_blank">
             v7 0.1B Demo
           </a>
           <a
             href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-2"
-            class="contact-button">
+            class="contact-button" target="_blank">
             v6 7B Demo
           </a>
-          <a href="https://discord.gg/bDSBUMeFpc" class="contact-button">
+          <a href="https://discord.gg/bDSBUMeFpc" target="_blank" class="contact-button">
             Discord
             <p style="font-size: 12px; margin-top: 0.2rem">(9k members)</p>
           </a>
         </div>
-        <a href="https://arxiv.org/abs/2404.05892"
+        <a href="https://arxiv.org/abs/2404.05892" target="_blank"
           ><img
             src="images/RWKV-paper.png"
             style="width: 100%"
@@ -172,6 +174,7 @@
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
+          target="_blank"
         >
           <p class="project-item-title">RWKV-LM</p>
           <p class="project-item-description">Training RWKV (and latest developments)</p>
@@ -182,6 +185,7 @@
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
+          target="_blank"
         >
           <p class="project-item-title">RWKV-Runner</p>
           <p class="project-item-description">RWKV GUI with one-click install and API</p>
@@ -192,6 +196,7 @@
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
+          target="_blank"
         >
           <p class="project-item-title">RWKV pip package</p>
           <p class="project-item-description">Official RWKV pip package</p>
@@ -202,6 +207,7 @@
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
+          target="_blank"
         >
           <p class="project-item-title">RWKV-PEFT</p>
           <p class="project-item-description">Finetuning RWKV (9GB VRAM can finetune 7B)</p>
@@ -212,6 +218,7 @@
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
+          target="_blank"
         >
           <p class="project-item-title">RWKV-server</p>
           <p class="project-item-description">Fast WebGPU inference (NVIDIA/AMD/Intel), nf4/int8/fp16</p>
@@ -222,6 +229,7 @@
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
+          target="_blank"
         >
           <p class="project-item-title">More... (400+ RWKV projects)</p>
           <p class="project-item-description"></p>
@@ -238,6 +246,7 @@
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
+          target="_blank"
         >
           <p class="project-item-title">RWKV raw weights</p>
           <p class="project-item-description">All latest RWKV weights</p>
@@ -248,6 +257,7 @@
           class="project-item"
           itemscope
           itemtype="https://huggingface.co/RWKV"
+          target="_blank"
         >
           <p class="project-item-title">RWKV weights</p>
           <p class="project-item-description">HuggingFace-compatible RWKV weights</p>
@@ -258,6 +268,7 @@
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
+          target="_blank"
         >
           <p class="project-item-title">RWKV-related papers</p>
           <p class="project-item-description"></p>
@@ -267,6 +278,7 @@
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
+          target="_blank"
         >
           <p class="project-item-title">RWKV wiki</p>
           <p class="project-item-description">Community wiki</p>
