--- a/index.html
+++ b/index.html
@@ -300,11 +300,18 @@
             ALL
           </button>
           <button
+            onclick="filterProjects('General', this)"
+            class="filter-btn flex-1 px-2 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
+            style="height: 36px"
+          >
+            General
+          </button>
+          <button
             onclick="filterProjects('Language', this)"
             class="filter-btn flex-1 px-2 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
             style="height: 36px"
           >
-            Language
+            Lang.
           </button>
           <button
             onclick="filterProjects('Image', this)"
