--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       }
 
       .content-section {
-        margin-bottom: 1.5em;
+        margin-bottom: 1.5rem;
       }
     </style>
   </head>
@@ -61,33 +61,9 @@
                 href="https://github.com/BlinkDL/RWKV-LM"
                 class="icon-link"
                 itemprop="sameAs"
-                style="display: flex;"
+                style="display: flex; text-decoration: underline;"
                 target="_blank"
-                ><svg
-                  class="icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink"
-                  x="0px"
-                  y="0px"
-                  viewBox="0 0 28 28"
-                  enable-background="new 0 0 28 28"
-                  xml:space="preserve"
-                  width="28"
-                >
-                  <path
-                    id="GitHub"
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    fill="#D1CECC"
-                    d="M14.01,0C6.27,0-0.01,6.28-0.01,14.02
-  c0,6.19,4.02,11.45,9.59,13.3c0.7,0.13,0.96-0.3,0.96-0.68c0-0.33-0.01-1.21-0.02-2.38c-3.9,0.85-4.72-1.88-4.72-1.88
-  c-0.64-1.62-1.56-2.05-1.56-2.05c-1.27-0.87,0.1-0.85,0.1-0.85c1.41,0.1,2.15,1.44,2.15,1.44c1.25,2.14,3.28,1.52,4.08,1.16
-  c0.13-0.91,0.49-1.52,0.89-1.87c-3.11-0.35-6.38-1.56-6.38-6.93c0-1.53,0.55-2.78,1.44-3.76C6.37,9.17,5.89,7.74,6.65,5.81
-  c0,0,1.18-0.38,3.85,1.44c1.12-0.31,2.32-0.47,3.51-0.47c1.19,0.01,2.39,0.16,3.51,0.47c2.68-1.81,3.85-1.44,3.85-1.44
-  c0.76,1.93,0.28,3.35,0.14,3.71c0.9,0.98,1.44,2.23,1.44,3.76c0,5.38-3.28,6.57-6.4,6.92c0.5,0.43,0.95,1.29,0.95,2.6
-  c0,1.87-0.02,3.39-0.02,3.84c0,0.37,0.25,0.81,0.96,0.67c5.56-1.86,9.58-7.11,9.58-13.3C28.03,6.28,21.75,0,14.01,0z"
-                  />
-                </svg><span style="margin-left: 0.1em;">Github</span>
+                >Github
               </a>
             </li>
             <li class="icon-link-item">
@@ -95,45 +71,33 @@
                 href="https://twitter.com/BlinkDL_AI"
                 class="icon-link"
                 itemprop="sameAs"
-                style="display: flex;"
+                style="display: flex; text-decoration: underline;"
                 target="_blank"
-                ><svg
-                  class="icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink"
-                  x="0px"
-                  y="0px"
-                  viewBox="0 0 28 28"
-                  enable-background="new 0 0 28 28"
-                  xml:space="preserve"
-                  width="28"
-                >
-                  <path
-                    id="Twitter"
-                    fill="#D1CECC"
-                    d="M14,0C6.27,0,0,6.27,0,14s6.27,14,14,14s14-6.27,14-14S21.73,0,14,0z M20.69,10.57
-  c0.01,0.15,0.01,0.3,0.01,0.45c0,4.56-3.47,9.82-9.82,9.82c-1.95,0-3.76-0.57-5.29-1.55c0.27,0.03,0.54,0.05,0.82,0.05
-  c1.62,0,3.11-0.55,4.29-1.48c-1.51-0.03-2.79-1.03-3.23-2.4c0.21,0.04,0.43,0.06,0.65,0.06c0.31,0,0.62-0.04,0.91-0.12
-  c-1.58-0.32-2.77-1.71-2.77-3.39c0-0.01,0-0.03,0-0.04c0.47,0.26,1,0.41,1.56,0.43c-0.93-0.62-1.54-1.68-1.54-2.87
-  c0-0.63,0.17-1.23,0.47-1.74c1.7,2.09,4.25,3.46,7.12,3.61c-0.06-0.25-0.09-0.52-0.09-0.79c0-1.91,1.55-3.45,3.45-3.45
-  c0.99,0,1.89,0.42,2.52,1.09c0.79-0.15,1.53-0.44,2.19-0.84c-0.26,0.81-0.81,1.48-1.52,1.91c0.7-0.08,1.36-0.27,1.98-0.54
-  C21.95,9.47,21.37,10.08,20.69,10.57z"
-                  />
-                </svg><span style="margin-left: 0.1em;">Twitter</span>
+                >Twitter
               </a>
             </li>
+            <li class="icon-link-item">
+              <a
+                href="https://discord.gg/bDSBUMeFpc"
+                class="icon-link"
+                itemprop="sameAs"
+                style="display: flex; text-decoration: underline;"
+                target="_blank"
+                >Discord
+              </a>
+            </li>            
           </ul>
         </div>
         <div class="executive-summary" itemprop="description">
-          <p style="margin-top: 0.5em;">
+          <p style="margin-top: 0.5rem;">
             RWKV (pronounced RwaKuv) is an RNN with great LLM performance,
             which can also be directly trained like a GPT transformer
             (parallelizable). We are at RWKV-7 "Goose".
           </p>
-          <p style="margin-top: 0.5em;">
+          <p style="margin-top: 0.5rem;">
             So it's combining the best of RNN and transformer - great
             performance, fast inference, fast training, saves VRAM, "infinite"
-            ctxlen, and free text embedding. Moreover it's 100% attention-free,
+            ctxlen, and free text embedding. And it's 100% attention-free,
             and a
             <a href="https://lfaidata.foundation/projects/rwkv/" style="text-decoration: underline;" target="_blank">Linux Foundation AI project</a
             >.
@@ -141,18 +105,17 @@
         </div>
         <div style="display: flex; margin-top: -0.5rem; gap: 0.3rem">
           <a
-            href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-1"
-            class="contact-button" target="_blank">
-            v7 0.1B Demo
-          </a>
-          <a
             href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-2"
             class="contact-button" target="_blank">
             v6 7B Demo
           </a>
-          <a href="https://discord.gg/bDSBUMeFpc" target="_blank" class="contact-button">
-            Discord
-            <p style="font-size: 12px; margin-top: 0.2rem">(9k members)</p>
+          <a
+            href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-1"
+            class="contact-button" target="_blank">
+            v7 0.1B Demo
+          </a>
+          <a href="https://cryscan.github.io/web-rwkv-puzzles/#/chat" target="_blank" class="contact-button">
+            WebGPU Demo
           </a>
         </div>
         <a href="https://arxiv.org/abs/2404.05892" target="_blank"
@@ -371,7 +334,7 @@
           <h2>RWKV-7 illustrated</h2>
         </header>
 
-        <div id="rwkv7_img">
+        <div id="rwkv7_img" style="margin-bottom: 1.5rem;">
           <img src="images/rwkv-x070.jpg" style="width: 100%" />
         </div>
 
@@ -386,7 +349,12 @@
       </section>
 
       <footer class="page-footer">
-        <p class="footer-line">RWKV.com 2024</p>
+        <p class="footer-line" style="color: black;">
+          RWKV.com
+          <a href="https://github.com/BlinkDL/RWKV-LM" target="_blank" style="text-decoration: underline; margin-left: 1rem;">Github</a>
+          <a href="https://twitter.com/BlinkDL_AI" target="_blank" style="text-decoration: underline; margin-left: 1rem;">Twitter</a>
+          <a href="https://discord.gg/bDSBUMeFpc" target="_blank" style="text-decoration: underline; margin-left: 1rem;">Discord</a>
+        </p>
       </footer>
     </div>
 
