--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
             (parallelizable). We are at RWKV-7 "Goose".
           </p>
           <p style="margin-top: 0.5rem;">
-            So it's combining the best of RNN and transformer - great
-            performance, fast inference, fast training, saves VRAM, "infinite"
-            ctxlen, and free text embedding. And it's 100% attention-free,
+            It's combining the best of RNN and transformer - great
+            performance, linear time, constant space (no kv-cache), fast training, infinite ctxlen, and free text embedding. And it's 100% attention-free,
             and a
             <a href="https://lfaidata.foundation/projects/rwkv/" style="text-decoration: underline;" target="_blank">Linux Foundation AI project</a
             >.
