--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
         <div id="rwkv7_img">
           <img src="images/RWKV-7.png" style="width: 100%" />
           <img src="images/v7-niah.png" style="width: 100%" />
+          <img src="images/v7-eval.png" style="width: 100%" />
           <br />
         </div>
 
