--- a/index.html
+++ b/index.html
@@ -210,12 +210,22 @@
           <p class="project-item-title">RWKV raw weights</p>
           <p class="project-item-description">All latest RWKV weights</p>
         </a>
+        
+        <a
+          href="https://huggingface.co/BlinkDL/rwkv-7-world"
+          class="project-item"
+          itemscope
+          itemtype="http://schema.org/CreativeWork"
+          target="_blank"
+        >
+          <img src="images/v7-world-eval.png" style="width: 100%" />
+        </a>
 
         <a
           href="https://huggingface.co/BlinkDL"
           class="project-item"
           itemscope
-          itemtype="https://huggingface.co/RWKV"
+          itemtype="http://schema.org/CreativeWork"
           target="_blank"
         >
           <p class="project-item-title">RWKV weights</p>
