--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
         </div>
         <div class="executive-summary" itemprop="description">
           <p style="margin-top: 0.5rem;">
-            RWKV (pronounced RwaKuv) is an RNN with great LLM performance,
-            which can also be directly trained like a GPT transformer
-            (parallelizable). We are at RWKV-7 "Goose".
+            RWKV (pronounced RwaKuv) is an RNN with great LLM performance and parallelizable like a Transformer. We are at <a href="https://huggingface.co/BlinkDL/rwkv7-g1" style="text-decoration: underline;" target="_blank">RWKV7-G1</a> "GooseOne" reasoning model.
           </p>
           <p style="margin-top: 0.5rem;">
             It's combining the best of RNN and transformer - great
@@ -101,14 +99,14 @@
         </div>
         <div style="display: flex; margin-top: -0.5rem; gap: 0.3rem">
           <a
-            href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-2"
-            class="contact-button" target="_blank">
-            v6 7B Demo
-          </a>
-          <a
             href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-1"
             class="contact-button" target="_blank">
             v7 3B Demo
+          </a>
+          <a
+            href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-2"
+            class="contact-button" target="_blank">
+            G1 0.1B Demo
           </a>
           <a href="https://cryscan.github.io/web-rwkv-puzzles/#/chat" target="_blank" class="contact-button">
             WebGPU Demo
@@ -222,7 +220,7 @@
         </a>
 
         <a
-          href="https://huggingface.co/BlinkDL"
+          href="https://huggingface.co/RWKV"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
