--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
             WebGPU Demo
           </a>
         </div>
-        <a href="https://arxiv.org/abs/2404.05892" target="_blank"
+        <a href="https://arxiv.org/abs/2503.14456" target="_blank"
           ><img
             src="images/RWKV-paper.png"
             style="width: 100%"
-            alt="RWKV paper"
+            alt="RWKV-7 paper"
             itemprop="image"
         /></a>
         <div style="margin-bottom: 0rem"></div>
