--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </a>
         
         <a
-          href="https://huggingface.co/BlinkDL/rwkv-7-world"
+          href="https://huggingface.co/BlinkDL"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
