--- a/index.html
+++ b/index.html
@@ -244,14 +244,14 @@
           <p class="project-item-description"></p>
         </a>
       <a
-          href="https://wiki.rwkv.com/"
+          href="https://wiki.rwkv.com/advance/architecture.html"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
           target="_blank"
         >
           <p class="project-item-title">RWKV wiki</p>
-          <p class="project-item-description">Community wiki</p>
+          <p class="project-item-description">with history of RWKV from v1 to v7 (note: AI-written)</p>
         </a>
       </section>
       <section class="content-section">
