--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
       .content-section {
         margin-bottom: 1.5rem;
       }
+
+      /* #projectGrid h3 {
+        font-size: 1rem;
+        line-height: 1.5rem;
+      } */
+      /* #projectGrid .p-4 {
+        padding: 0.5rem;
+      }       */
     </style>
   </head>
 
@@ -101,7 +109,7 @@
           <a
             href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-2"
             class="contact-button" target="_blank">
-            G1 2.9B Demo
+            G0 7.2B Demo
           </a>
           <a href="https://huggingface.co/spaces/RWKV-Red-Team/RWKV-LatestSpace" target="_blank" class="contact-button">
             G1 Chat 💬
