--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           <p class="project-item-description"></p>
         </a>
       <a
-          href="https://wiki.rwkv.com/advance/architecture.html"
+          href="https://wiki.rwkv.com"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
