--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
           <a
             href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-2"
             class="contact-button" target="_blank">
-            G0 7.2B Demo
+            G0a 7.2B Demo
           </a>
           <a href="https://huggingface.co/spaces/RWKV-Red-Team/RWKV-LatestSpace" target="_blank" class="contact-button">
-            G1 Chat 💬
+            Online Chat 💬
           </a>
           <a
             href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-1"
             class="contact-button" target="_blank">
-            G1 2.9B Demo
+            G1a 2.9B Demo
           </a>
           <!-- <a href="https://cryscan.github.io/web-rwkv-puzzles/#/chat" target="_blank" class="contact-button">
             WebGPU Demo
