--- a/index.html
+++ b/index.html
@@ -156,7 +156,18 @@
           target="_blank"
         >
           <p class="project-item-title">RWKV-Runner</p>
-          <p class="project-item-description">RWKV GUI with one-click install and API</p>
+          <p class="project-item-description">RWKV GUI with API (PC)</p>
+        </a>
+
+        <a
+          href="https://github.com/RWKV-APP/RWKV_APP"
+          class="project-item"
+          itemscope
+          itemtype="http://schema.org/CreativeWork"
+          target="_blank"
+        >
+          <p class="project-item-title">RWKV App</p>
+          <p class="project-item-description">Run local RWKV on your phone (Android, iOS)</p>
         </a>
 
         <a
@@ -189,7 +200,7 @@
           target="_blank"
         >
           <p class="project-item-title">RWKV-server</p>
-          <p class="project-item-description">Fast WebGPU inference (NVIDIA/AMD/Intel), nf4/int8/fp16</p>
+          <p class="project-item-description">WebGPU inference (NVIDIA/AMD/Intel), nf4/int8/fp16</p>
         </a>
 
         <a
@@ -199,7 +210,7 @@
           itemtype="http://schema.org/CreativeWork"
           target="_blank"
         >
-          <p class="project-item-title">More... (400+ RWKV projects)</p>
+          <p class="project-item-title">More... (500+ RWKV projects)</p>
           <p class="project-item-description"></p>
         </a>
       </section>
