--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="executive-summary" itemprop="description">
           <p style="margin-top: 0.5rem;">
-            RWKV (pronounced RwaKuv) is an RNN with great LLM performance and parallelizable like a Transformer. We are at <a href="https://huggingface.co/BlinkDL/rwkv7-g1" style="text-decoration: underline;" target="_blank">RWKV7-G1</a> "GooseOne" reasoning model.
+            RWKV (pronounced RwaKuv) is an RNN with great LLM performance and parallelizable like a Transformer. Check <a href="https://huggingface.co/BlinkDL/rwkv7-g1" style="text-decoration: underline;" target="_blank">RWKV-7 "Goose" reasoning models</a>.
           </p>
           <p style="margin-top: 0.5rem;">
             It's combining the best of RNN and transformer - great
@@ -345,6 +345,15 @@
           <span id="totalCount" class="text-gray-600 text-sm"></span>
 
           <div class="flex items-center space-x-1" id="pagination"></div>
+        </div>
+
+        <header class="section-header">
+          <h2>RWKV-8 explained</h2>
+        </header>
+
+        <div id="rwkv8_img">
+          <img src="images/RWKV-8-ROSA.png" style="width: 100%" />
+          <br />
         </div>
 
         <header class="section-header">
