--- a/index.html
+++ b/index.html
@@ -149,6 +149,28 @@
         </a>
 
         <a
+          href="https://github.com/RWKV-APP/RWKV_APP"
+          class="project-item"
+          itemscope
+          itemtype="http://schema.org/CreativeWork"
+          target="_blank"
+        >
+          <p class="project-item-title">RWKV App</p>
+          <p class="project-item-description">Run local RWKV 0.1~7B on your phone (Android, iOS)</p>
+        </a>
+
+        <a
+          href="https://github.com/BlinkDL/Albatross"
+          class="project-item"
+          itemscope
+          itemtype="http://schema.org/CreativeWork"
+          target="_blank"
+        >
+          <p class="project-item-title">Albatross</p>
+          <p class="project-item-description">Very efficient inference (7B fp16 bsz960 = 10250+ tps on 5090)</p>
+        </a>
+
+        <a
           href="https://github.com/josStorer/RWKV-Runner"
           class="project-item"
           itemscope
@@ -160,17 +182,6 @@
         </a>
 
         <a
-          href="https://github.com/RWKV-APP/RWKV_APP"
-          class="project-item"
-          itemscope
-          itemtype="http://schema.org/CreativeWork"
-          target="_blank"
-        >
-          <p class="project-item-title">RWKV App</p>
-          <p class="project-item-description">Run local RWKV on your phone (Android, iOS)</p>
-        </a>
-
-        <a
           href="https://pypi.org/project/rwkv/"
           class="project-item"
           itemscope
@@ -178,7 +189,7 @@
           target="_blank"
         >
           <p class="project-item-title">RWKV pip package</p>
-          <p class="project-item-description">Official RWKV pip package</p>
+          <p class="project-item-description">RWKV pip reference (slower) package</p>
         </a>
 
         <a
@@ -210,7 +221,7 @@
           itemtype="http://schema.org/CreativeWork"
           target="_blank"
         >
-          <p class="project-item-title">More... (500+ RWKV projects)</p>
+          <p class="project-item-title">More... (600+ RWKV projects)</p>
           <p class="project-item-description"></p>
         </a>
       </section>
@@ -227,7 +238,7 @@
           itemtype="http://schema.org/CreativeWork"
           target="_blank"
         >
-          <p class="project-item-title">RWKV raw weights</p>
+          <p class="project-item-title">RWKV weights</p>
           <p class="project-item-description">All latest RWKV weights</p>
         </a>
         
@@ -242,14 +253,14 @@
         </a>
 
         <a
-          href="https://huggingface.co/RWKV"
+          href="https://ollama.com/mollysama"
           class="project-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
           target="_blank"
         >
-          <p class="project-item-title">RWKV weights</p>
-          <p class="project-item-description">HuggingFace-compatible RWKV weights</p>
+          <p class="project-item-title">RWKV Ollama weights</p>
+          <p class="project-item-description">Ollama GGUF RWKV weights</p>
         </a>
 
         <a
