--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <a
             href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-2"
             class="contact-button" target="_blank">
-            G0b 7.2B Demo
+            G1c 7.2B Demo
           </a>
           <a href="https://huggingface.co/spaces/RWKV-Red-Team/RWKV-LatestSpace" target="_blank" class="contact-button">
             Online Chat 💬
@@ -117,7 +117,7 @@
           <a
             href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-1"
             class="contact-button" target="_blank">
-            G1b 2.9B Demo
+            G1c 2.9B Demo
           </a>
           <!-- <a href="https://cryscan.github.io/web-rwkv-puzzles/#/chat" target="_blank" class="contact-button">
             WebGPU Demo
@@ -409,4 +409,5 @@
     <script src="./js/index.js"></script>
   </body>
 </html>
+
 
